@@ -74,7 +74,7 @@ char ARG_HELP[] = ABOUT_MSG "\n"
 						"--no-ansi     do not use built-in ANSI control sequences. [--noansi]\n"
 						"--no-config   do not read configuration files. [--noconfig]\n"
 						"--no-syntax   disable syntax-highlighting support.\n"
-						"--no-bpaste   start with bracketed paste disabled. [--nobpaste]\n"
+						"--no-bpaste   disable bracketed paste support. [--nobpaste]\n"
 						"--prefs EXT   set autoprefs for the provided extension before loading the first file.\n"
 						"--keys FILE   use this file for keyboard configuration.\n"
 						"--menus FILE  use this file for menu configuration.\n"
@@ -105,7 +105,7 @@ bool fast_gui;
 bool status_bar = true;
 bool interactive_mode;
 bool verbose_macros = true;
-int bracketed_paste = BPASTE_DEFAULT;
+bool bpaste_supported = true;
 /* end of global prefs */
 
 buffer *cur_buffer;
@@ -223,6 +223,7 @@ int main(int argc, char **argv) {
 			}
 			else if (!strcmp(&argv[i][2], "no-bpaste") || !strcmp(&argv[i][2], "nobpaste")) {
 				turn_off_bracketed_paste();
+				bpaste_supported = false;
 				skiplist[i] = 1; /* argv[i] = NULL; */
 			}
 			else if (!strcmp(&argv[i][2], "prefs")) {
@@ -537,8 +538,8 @@ int main(int argc, char **argv) {
 		case COMMAND:
 			if (c < 0) c = -c - 1;
 			if (key_binding[c]) print_error(execute_command_line(cur_buffer, key_binding[c]));
-			else if (c == NE_KEY_BPASTE_BEGIN) bracketed_paste_begin(cur_buffer);
-			else if (c == NE_KEY_BPASTE_END) bracketed_paste_end(cur_buffer);
+			else if (c == NE_KEY_BPASTE_BEGIN && bpaste_supported) bracketed_paste_begin(cur_buffer);
+			else if (c == NE_KEY_BPASTE_END   && bpaste_supported) bracketed_paste_end(cur_buffer);
 			break;
 
 		default:
