@@ -230,7 +230,7 @@ static bool standout_mode;         /* True when in standout mode. */
 static bool standout_wanted;       /* True if we should be writing in standout mode. */
 static bool underline_mode;        /* True when in underline mode. */
 static bool underline_wanted;      /* True if we should be writing in underline mode. */
-
+static bool bpaste_support_enabled;
 /* Size of window specified by higher levels. This is the number of lines,
    starting from top of screen, to participate in ins/del line operations.
    Effectively it excludes the bottom lines - specified_window_size lines from
@@ -563,13 +563,13 @@ static void turn_off_insert (void) {
 }
 
 void turn_on_bracketed_paste(void) {
-	if (!(bracketed_paste & BPASTE_IS_ENABLED)) OUTPUT1_IF(BPASTE_ENABLE_SEQ);
-	bracketed_paste |= BPASTE_IS_ENABLED;
+	if (bpaste_support_enabled) OUTPUT1_IF(BPASTE_ENABLE_SEQ);
+	bpaste_support_enabled = true;
 }
 
 void turn_off_bracketed_paste(void) {
-	if (bracketed_paste & BPASTE_IS_ENABLED) OUTPUT1_IF(BPASTE_DISABLE_SEQ);
-	bracketed_paste &= ~BPASTE_IS_ENABLED;
+	if (bpaste_support_enabled) OUTPUT1_IF(BPASTE_DISABLE_SEQ);
+	bpaste_support_enabled = false;
 }
 
 
@@ -590,7 +590,7 @@ void set_terminal_modes(void) {
 	OUTPUT1_IF(ne_exit_underline_mode);
 	OUTPUT1_IF(ne_enter_ca_mode);
 	OUTPUT1_IF(ne_keypad_xmit);
-	if (bracketed_paste & BPASTE_IS_ENABLED) OUTPUT1_IF(BPASTE_ENABLE_SEQ);
+	if (bpaste_supported) OUTPUT1_IF(BPASTE_ENABLE_SEQ);
 
 	if (ne_has_meta_key) OUTPUT1_IF(ne_meta_on);
 		turn_off_standout();
@@ -603,7 +603,7 @@ void set_terminal_modes(void) {
 
 void reset_terminal_modes (void) {
 
-	if (bracketed_paste & BPASTE_IS_ENABLED) OUTPUT1_IF(BPASTE_DISABLE_SEQ);
+	if (bpaste_supported) OUTPUT1_IF(BPASTE_DISABLE_SEQ);
 	OUTPUT1_IF(ne_exit_attribute_mode);
 	OUTPUT1_IF(ne_exit_alt_charset_mode);
 	turn_off_standout();
